# autocommit

./: LICENSE  Pipfile  README.md  pyproject.toml
autocommit/: chat.py  oneoff.py
src/: oneoff.py
