[project]
name = "autocommit"
version = "0.0.1"
dependencies = ["openai", 'importlib-metadata; python_version>="3.10"']

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
tldr = "autocommit.oneoff:tldr"
grammarly = "autocommit.oneoff:grammarly"
gentitle = "autocommit.oneoff:title"
git-ci = "autocommit.oneoff:commit"
